--- a/assets/css/fresh-bootstrap-table.css
+++ b/assets/css/fresh-bootstrap-table.css
@@ -1136,6 +1136,10 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
   background-color: #FFFFFF;
   border-radius: 10px;
   color: #666666;
+
+  border-style: solid;
+  border-width: 2px;
+  border-color: #000000;
 }
 .fresh-table .btn {
   border-radius: 30px !important;
@@ -1620,21 +1624,4 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
 }
 .fresh-table .fa {
   min-width: 18px;
-}
-
-.buffer {
-  background-color: #000000;
-  text-align: center;
-}
-
-.wake-up {
-  background-color: #1C3E75;
-  border-radius: 10px 10px 0px 0px;
-  text-align: center;
-}
-
-.sleep {
-  background-color: #1C3E75;
-  border-radius: 0px 0px 10px 10px;
-  text-align: center;
 }
