--- a/assets/css/fresh-bootstrap-table.css
+++ b/assets/css/fresh-bootstrap-table.css
@@ -502,7 +502,8 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
 }
 
 .margin-top {
-  margin-top: 50px;
+  /*margin-top: 50px;*/
+  margin-top: 0px;
 }
 
 .btn {
